# hbs-chat-agent

./: LICENSE  README.md  pyproject.toml
prompt/: 加密货币机器人.md  金融量化策略专家.md
quant/backtest/demo/: demo.py
quant/examples/benchmarks/LightGBM/mlruns/0/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/01312f65d5a442b0bdc9f3c440a2f6f6/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/06f916c44c884eacad44aa2e8d54adee/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/0a6891b94bdf4611842fd34f8ad5e0c6/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/10eb824464bf4e90bee371425512b5c2/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/1920acd254b6493e8fab54f3a11466e2/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/26c0dce538294269932c6edad939571a/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/2a398f83a7364d5fa926ecbe99e9c568/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/2e665caab6b94dfea6fcd4bc7bf7475f/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/3150e5ea1dc34666ba7211b6c20a40d3/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/5bbf8ce3efd742df97ec92213ecb5b39/: meta.yaml
quant/examples/benchmarks/LightGBM/mlruns/1/604d05e9cdb94ddfa9c068528529566c/: meta.yaml
quant/notebooks/: data_layer.ipynb  data_preprocessing.ipynb  example.ipynb
quant/src/data/: data_loader.py
quant/src/features/: feature_extractor.py
quant/tests/: test_cover_freq_data.py
utils/pdf/: test_pdf_img_cover_text.py
(+230 files in other folders)
