[tool.poetry]
name = "hbs-chat-agent"
version = "0.1.0"
description = "This is a LLM-based Agent, can help us realize our daily work, study, life want all the useful tools helpers"
authors = ["javafunss <javafunss@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
